Fixed page overflowing

--- a/resources/sass/_default.scss
+++ b/resources/sass/_default.scss
@@ -3,7 +3,6 @@ body, html {
     padding: 0;
     background-color: $primary-background;
     font-family: $secondary-font;
-    max-width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
